@@ -18,48 +18,59 @@ import java.util.List;
 @EnableWebFluxSecurity
 public class SecurityConfig {
 
-    @Bean
-    public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http,
-            CorsConfigurationSource corsConfigurationSource, JwtAuthenticationFilter jwtFilter) {
-        return http
-                .csrf(ServerHttpSecurity.CsrfSpec::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource)) // Link CORS config to Security
-                .formLogin(ServerHttpSecurity.FormLoginSpec::disable)
-                .httpBasic(ServerHttpSecurity.HttpBasicSpec::disable)
-                .authorizeExchange(exchanges -> exchanges
-                        .pathMatchers("/auth/**", "/public/**", "/api/user/login").permitAll() // Ensure login is
-                                                                                               // permitted (redundant
-                                                                                               // with /auth/? no
-                                                                                               // matches backend path)
-                        // Wait, backend path is /api/user/login.
-                        // Route matches /api/**.
-                        // Gateway sees /api/user/login.
-                        // My Config says pathMatchers("/auth/**").
-                        // Does NOT match /api/user/login.
-                        // So /api/user/login requires Authentication.
-                        // BUT user has no token yet.
-                        // RESULT: 401 Unauthorized on OPTIONS or POST.
-                        // FIX: Add /api/** (risky?) or specific login path /api/user/login to
-                        // permitAll.
-                        .pathMatchers("/api/user/login", "/api/user/signup", "/auth/**", "/public/**").permitAll()
-                        .anyExchange().authenticated())
-                .addFilterAt(jwtFilter, SecurityWebFiltersOrder.AUTHENTICATION)
-                .build();
-    }
+        @Bean
+        public SecurityWebFilterChain securityWebFilterChain(ServerHttpSecurity http,
+                        CorsConfigurationSource corsConfigurationSource, JwtAuthenticationFilter jwtFilter) {
+                return http
+                                .csrf(ServerHttpSecurity.CsrfSpec::disable)
+                                .cors(cors -> cors.configurationSource(corsConfigurationSource)) // Link CORS config to
+                                                                                                 // Security
+                                .formLogin(ServerHttpSecurity.FormLoginSpec::disable)
+                                .httpBasic(ServerHttpSecurity.HttpBasicSpec::disable)
+                                .authorizeExchange(exchanges -> exchanges
+                                                .pathMatchers("/auth/**", "/public/**", "/api/user/login").permitAll() // Ensure
+                                                                                                                       // login
+                                                                                                                       // is
+                                                                                                                       // permitted
+                                                                                                                       // (redundant
+                                                                                                                       // with
+                                                                                                                       // /auth/?
+                                                                                                                       // no
+                                                                                                                       // matches
+                                                                                                                       // backend
+                                                                                                                       // path)
+                                                // Wait, backend path is /api/user/login.
+                                                // Route matches /api/**.
+                                                // Gateway sees /api/user/login.
+                                                // My Config says pathMatchers("/auth/**").
+                                                // Does NOT match /api/user/login.
+                                                // So /api/user/login requires Authentication.
+                                                // BUT user has no token yet.
+                                                // RESULT: 401 Unauthorized on OPTIONS or POST.
+                                                // FIX: Add /api/** (risky?) or specific login path /api/user/login to
+                                                // permitAll.
+                                                .pathMatchers("/api/user/login", "/api/user/signup", "/auth/**",
+                                                                "/public/**", "/api/countries/**", "/api/ws-stomp/**")
+                                                .permitAll()
+                                                .anyExchange().authenticated())
+                                .addFilterAt(jwtFilter, SecurityWebFiltersOrder.AUTHENTICATION)
+                                .build();
+        }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOriginPatterns(List.of("*"));
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "accept", "Origin",
-                "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-        config.setAllowCredentials(true);
-        config.setMaxAge(3600L);
+        @Bean
+        public CorsConfigurationSource corsConfigurationSource() {
+                CorsConfiguration config = new CorsConfiguration();
+                config.setAllowedOriginPatterns(List.of("*"));
+                config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+                config.setAllowedHeaders(
+                                Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "accept", "Origin",
+                                                "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+                config.setAllowCredentials(true);
+                config.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+                UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+                source.registerCorsConfiguration("/**", config);
 
-        return source;
-    }
+                return source;
+        }
 }
